# BraggNN

./: braggnn_int8.mlir  convert-onnx.py  export-onnx.py  export_input_patches.py  export_tvm.py  extract-onnx-scales.py  extract_onnx_intermediates.py  extract_weights.py  gemmini_quantizer.py  inference-onnx.py  inference.py  inference_fp32.py  model.py  model2mlir.py  onnx-quantize-static.py  pt2e-quantize.py  ptqfwd.py  pyproject.toml  quantize.py
models/: int8_16_8_4_2-sz11.pth
onnx/: braggnn_fp32.onnx  braggnn_fp32.onnx.data  braggnn_fp32_opset13.onnx  braggnn_int8.onnx  braggnn_int8.onnx.data  braggnn_int8_qlinear_opset10.onnx  braggnn_int8_qlinear_opset13.onnx
