[project]
name = "braggnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-tvm-ffi==0.1.11",
    "executorch>=1.3.1",
    "h5py>=3.16.0",
    "onnxruntime>=1.23.2",
    "pytest>=9.1.1",
    "scikit-image>=0.26.0",
    "torch>=2.12.1",
    "torchao>=0.17.0",
]
